--- a/package.json
+++ b/package.json
@@ -9,22 +9,22 @@
 		"cf-typegen": "wrangler types",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "tsx ./src/db/migrate.ts",
-		"test": "vitest"
+		"test": "vitest run --pool=cloudflare-workers"
 	},
 	"devDependencies": {
-		"@cloudflare/vitest-pool-workers": "^0.4.5",
-		"@cloudflare/workers-types": "^4.20240903.0",
+		"@cloudflare/vitest-pool-workers": "^0.4.30",
+		"@cloudflare/workers-types": "^4.20240909.0",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.24.2",
 		"postgres": "^3.4.4",
 		"tsx": "^4.19.0",
-		"typescript": "^5.5.2",
+		"typescript": "^5.6.2",
 		"vitest": "1.5.0",
-		"wrangler": "^3.60.3"
+		"wrangler": "^3.76.0"
 	},
 	"dependencies": {
 		"@neondatabase/serverless": "^0.9.5",
 		"drizzle-orm": "^0.33.0",
-		"hono": "^4.5.11"
+		"hono": "^4.6.1"
 	}
 }
