--- a/wrangler.toml
+++ b/wrangler.toml
@@ -3,6 +3,7 @@ name = "aj-doge-labs"
 main = "src/index.ts"
 compatibility_date = "2024-09-03"
 compatibility_flags = ["nodejs_compat"]
+minify = true
 
 # Automatically place your workloads in an optimal location to minimize latency.
 # If you are running back-end logic in a Worker, running it closer to your back-end infrastructure
