--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,8 +16,8 @@ jobs:
         uses: oven-sh/setup-bun@v2
         with:
           bun-version: latest
-      - name: Install dependencies
-        run: bun install
+      # - name: Install dependencies
+      #   run: bun install
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
