--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,6 +18,9 @@ jobs:
           bun-version: latest
       # - name: Install dependencies
       #   run: bun install
+      - name: Run tests
+        run: bun run test
+      # TODO: Add tests to CI
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
