--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"tsx": "^4.19.0",
 		"typescript": "^5.6.2",
 		"vitest": "1.5.0",
+		"vitest-environment-miniflare": "^2.14.3",
 		"wrangler": "^3.76.0"
 	},
 	"dependencies": {
