--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 		"cf-typegen": "wrangler types",
 		"db:generate": "drizzle-kit generate",
 		"db:migrate": "tsx ./src/db/migrate.ts",
-		"test": "vitest run --pool=cloudflare-workers"
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.4.30",
