fix: update additional drizzle related config

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "tsx ./src/db/migrate.ts",
+		"db:migrate": "tsx ./src/backend/db/migrate.ts",
 		"test": "vitest"
 	},
 	"devDependencies": {
