feat/setup-user-service-and-api-endpoints
* build: added base user service tests

* build: added base user service file

* chore: fix tests

* test: tests in ci

* test: revert test

* test: attempt to make tests work with CI

* chore: tests ci

* build: added base test in integration test

* build: added base test in integration test 2

* build: added CI/CD for tests

* refactor: organize app into backend & frontend

* fix: update schema and migrations file in drizzle config

* fix: update additional drizzle related config

* build: added defaults for primary keys in user & user_friends

* build: renamed .env.* files to .dev.vars to work with CF

* chore: remove env definition from root index.ts

* build: added a factory function for creating a database

* build: dependency injecting user service into all backend routes

* chore: added clarification comment in backend.routes

* build: added standardized way of returning API responses

* build: stronger types for API responses

* build using API response generator for route handler

* build: added order users by updated at

* chore: added todo comments in schema

* chore: organizing routes and services in backend.routes

* docs: updated readme

* build: remove search query as field in getAllUsers

* build: added todos for friends related functionality

* build: added implementation for friend related functionality

* build: added userId injection in backend routes

* build: implement add, confirm and get friends

* build: remove nickname field from userfriends
- this would ideally be a different table so both users can have different names for each other
- Out of scope for this project and would take unnecessary time

* docs: updated contribution guide

* fix: either initiator or receiver can remove friend

* refactor: rename _usersAreFriends to _areFriendsOrHavePendingRequest

* refactor: split friend functionality into its own service

* ref

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"start": "wrangler dev",
 		"cf-typegen": "wrangler types",
 		"db:generate": "drizzle-kit generate",
-		"db:migrate": "tsx ./src/db/migrate.ts",
-		"test": "vitest run --pool=cloudflare-workers"
+		"db:migrate": "tsx ./src/backend/db/migrate.ts",
+		"test": "vitest"
 	},
 	"devDependencies": {
 		"@cloudflare/vitest-pool-workers": "^0.4.30",
@@ -20,7 +20,6 @@
 		"tsx": "^4.19.0",
 		"typescript": "^5.6.2",
 		"vitest": "1.5.0",
-		"vitest-environment-miniflare": "^2.14.3",
 		"wrangler": "^3.76.0"
 	},
 	"dependencies": {
