--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,12 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Install dependencies
+        run: bun install
+
+      - name: Run tests
+        run: bun run test
+
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
