--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"wrangler": "^3.76.0"
 	},
 	"dependencies": {
+		"@hono/zod-validator": "^0.2.2",
 		"@neondatabase/serverless": "^0.9.5",
 		"drizzle-orm": "^0.33.0",
 		"hono": "^4.6.1"
