fix: remove unnecessary bun flag in frontend package.json

--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -4,8 +4,8 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
-		"dev": "bunx --bun vite",
-		"build": "bunx --bun vite build",
+		"dev": "bunx vite",
+		"build": "bunx vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
 	},
