--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["src/shared/*"],
+	"include": ["../shared/*"],
 	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
 	"compilerOptions": {
 		"paths": {
