refactor: move types back into backend

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"include": ["../shared/*"],
+	"include": ["../backend/types/*.ts"],
 	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
 	"compilerOptions": {
 		"paths": {
