build: added tailwind & shadcn

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -3,7 +3,7 @@
 	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
 	"compilerOptions": {
 		"paths": {
-			"@shared/*": ["../shared/*"]
+			"@/*": ["./src/*"]
 		}
 	}
 }
