--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -34,6 +34,7 @@
 		"tailwindcss": "^3.4.12",
 		"typescript": "^5.5.3",
 		"typescript-eslint": "^8.0.1",
-		"vite": "^5.4.1"
+		"vite": "^5.4.1",
+		"vite-tsconfig-paths": "^5.0.1"
 	}
 }
