fix: build and lint errors in frontend

--- a/src/frontend/tsconfig.json
+++ b/src/frontend/tsconfig.json
@@ -1,6 +1,5 @@
 {
-	"include": ["../backend/types/*.ts", "src"],
-
+	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
 	"compilerOptions": {
 		"baseUrl": ".",
 		"esModuleInterop": true,
