build: update deploy.yml to use new folder structure

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           bun-version: latest
 
+      - name: Cd into the server
+        run: cd server
+
       - name: Install dependencies
         run: bun install
 
