--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - fix/failing-cloudflare-workers-deploy
 
 jobs:
   deploy:
@@ -17,17 +18,20 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Cd into the server
-        run: cd server
-
       - name: Install dependencies
+        working-directory: ./server
         run: bun install
 
       - name: Run tests
+        working-directory: ./server
         run: bun run test
+
+      - name: Print working directory
+        run: pwd
 
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          workingDirectory: server
           packageManager: bun
