config: revert tsconfig.app & tsconfig.node to original vite versions

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -10,7 +10,7 @@
 		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		"noEmit": false,
+		"noEmit": true,
 		"jsx": "react-jsx",
 
 		"strict": true,
