--- a/client/tsconfig.node.json
+++ b/client/tsconfig.node.json
@@ -9,7 +9,7 @@
 		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		"noEmit": false,
+		"noEmit": true,
 
 		"strict": true,
 		"noUnusedLocals": true,
