--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,5 +1,8 @@
 {
-	"references": [{ "path": "./tsconfig.app.json" }, { "path": "./tsconfig.node.json" }],
+	"references": [
+		{ "path": "./tsconfig.app.json" },
+		{ "path": "./tsconfig.node.json" }
+	],
 	"compilerOptions": {
 		"baseUrl": ".",
 		"esModuleInterop": true,
