config: remove unnecessary include from client tsconfig

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -21,7 +21,6 @@
 		"composite": true,
 		"paths": {
 			"@/*": ["./src/*"],
-			"@server/endpoints": ["../server/src/index.ts"],
 			"@server/types": ["../server/src/types/index.ts"]
 		}
 	},
@@ -30,7 +29,6 @@
 		"src",
 
 		// Server related
-		"../server/src/types/index.ts",
-		"../server/src/index.ts"
+		"../server/src/types/index.ts"
 	]
 }
