--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,8 @@
 	},
 	"dependencies": {
 		"@radix-ui/react-icons": "^1.3.0",
+		"@tanstack/react-query": "^5.56.2",
+		"@tanstack/react-query-devtools": "^5.56.2",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.5.4",
@@ -22,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.9.0",
+		"@tanstack/eslint-plugin-query": "^5.56.1",
 		"@types/react": "^18.3.3",
 		"@types/react-dom": "^18.3.0",
 		"@vitejs/plugin-react": "^4.3.1",
