--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -10,7 +10,7 @@
 		"allowImportingTsExtensions": true,
 		"isolatedModules": true,
 		"moduleDetection": "force",
-		"noEmit": false,
+		"noEmit": true,
 		"jsx": "react-jsx",
 
 		"strict": true,
@@ -18,7 +18,17 @@
 		"noUnusedParameters": true,
 		"noFallthroughCasesInSwitch": true,
 
-		"composite": true
+		"composite": true,
+		"paths": {
+			"@/*": ["./src/*"],
+			"@server/types": ["../server/src/types/index.ts"]
+		}
 	},
-	"include": ["src"]
+	"include": [
+		// Client related
+		"src",
+
+		// Server related
+		"../server/src/types/index.ts"
+	]
 }
