--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-query-devtools": "^5.56.2",
