--- a/client/package.json
+++ b/client/package.json
@@ -18,8 +18,10 @@
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.5.4",
 		"lucide-react": "^0.441.0",
+		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7"
 	},
