--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
 		"@radix-ui/react-tooltip": "^1.1.2",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-query-devtools": "^5.56.2",
