--- a/client/package.json
+++ b/client/package.json
@@ -10,15 +10,21 @@
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@radix-ui/react-dialog": "^1.1.1",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-tooltip": "^1.1.2",
 		"@tanstack/react-query": "^5.56.2",
 		"@tanstack/react-query-devtools": "^5.56.2",
+		"@tanstack/react-table": "^8.20.5",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^11.5.4",
 		"lucide-react": "^0.441.0",
+		"next-themes": "^0.3.0",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"sonner": "^1.5.0",
 		"tailwind-merge": "^2.5.2",
 		"tailwindcss-animate": "^1.0.7"
 	},
